--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -125,7 +125,7 @@ set(msg_files
 	LandingGearWheel.msg
 	LandingTargetInnovations.msg
 	LandingTargetPose.msg
-	LateralControlLimits.msg
+	LateralControlConfiguration.msg
 	LaunchDetectionStatus.msg
 	LedControl.msg
 	LoggerStatus.msg
