--- a/src/modules/uxrce_dds_client/dds_topics.yaml
+++ b/src/modules/uxrce_dds_client/dds_topics.yaml
@@ -175,8 +175,8 @@ subscriptions:
   - topic: /fmu/in/longitudinal_control_limits
     type: px4_msgs::msg::LongitudinalControlLimits
 
-  - topic: /fmu/in/lateral_control_limits
-    type: px4_msgs::msg::LateralControlLimits
+  - topic: /fmu/in/lateral_control_configuration
+    type: px4_msgs::msg::LateralControlConfiguration
 
 # Create uORB::PublicationMulti
 subscriptions_multi:
